For pete's sake. I spent a bunch of time last night trying to work around the IE bug and only came away with frustration. There is a supposed workaround that doesn't work. But, it sounds like the GWT engineers are working around this IE bug, *right now*, for GWT 1.5, so maybe we can roll back in the future. http://code.google.com/p/google-web-toolkit/issues/detail?id=318
What I've done for now: Bill made the icon small enough that I can fit
it next to the thumbnail, and we just show the thumbnail off-center.

--- a/pages/css/gwt.css
+++ b/pages/css/gwt.css
@@ -530,11 +530,6 @@ img, embed, applet, object {
   width: 80px;
 }
 
-.itemThumbBox {
-  width: 100px;
-  height: 60px;
-}
-
 .itemThumbnail .Image {
   height: 60px;
   text-align: center;
